simplified publish API
