# crates/server/openapi.yaml
@@ -88,7 +88,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /package/{logId}/record:
+  /package:
     post:
       summary: Publish a new record to a package log.
       operationId: publishPackageRecord
@@ -101,13 +101,6 @@ paths:
         Publishing package records is an asynchronous operation.
 
         The record must be signed by a key that is authorized to modify the package log.
-      parameters:
-        - name: logId
-          in: path
-          description: The package log identifier.
-          required: true
-          schema:
-            "$ref": "#/components/schemas/AnyHash"
       requestBody:
         required: true
         content:
@@ -479,9 +472,9 @@ components:
       allOf:
         - type: object
           required:
-            - id
+            - recordId
           properties:
-            id:
+            recordId:
               "$ref": "#/components/schemas/AnyHash"
               description: The record identifier.
         - oneOf:
